--- a/bootcamp4/src/index.css
+++ b/bootcamp4/src/index.css
@@ -11,11 +11,14 @@ body {
 main {
 	padding: 0 2rem;
 }
+.thepaper{
+	padding: 5px;
+	margin: 10px;
+}
 .stuff {
 	padding-top: 5px;
 	padding-bottom: 5px;
-	margin-top: 5px;
-	margin-bottom: 5px;
+	margin: 5px;
 	cursor: pointer;
 }
 .stuff:hover {
@@ -72,7 +75,8 @@ td:hover {
 	float: left;
 	width: 50%;
 	padding: 20px;
-	background-color: #ccdef9;
+	background-color: #ccdef9 !important;
+	margin-top: 15px;
 }
 
 /* ##### Rows ##### */
